--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,7 +38,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:cornerRadius="10dp"
-                app:backgroundTint="#0277BD"
+                app:backgroundTint="@color/Blue"
                 android:layout_marginEnd="8dp"
                 android:visibility="gone"/>
 
