--- a/app/src/main/res/layout/fragment_links.xml
+++ b/app/src/main/res/layout/fragment_links.xml
@@ -6,7 +6,7 @@
     >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDriveLinks"
+        android:id="@+id/recyclerViewLinks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
