--- a/app/src/main/res/layout/item_developer_email.xml
+++ b/app/src/main/res/layout/item_developer_email.xml
@@ -47,6 +47,7 @@
                         android:textSize="17sp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
+                        android:layout_marginBottom="12dp"
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -57,9 +58,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Request Feature"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
-                        android:background="@drawable/rounded_button"
+                        android:background="@drawable/rounded_whitebg"
+                        android:backgroundTint="@color/Green"
                         android:padding="10dp"
                         android:layout_marginBottom="10dp"
                         android:layout_gravity="center"/>
