--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -1,62 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    card_view:cardElevation="4dp"
-    card_view:cardCornerRadius="8dp">
+    android:layout_marginBottom="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp"
+    app:strokeWidth="1dp"
+    app:strokeColor="@android:color/darker_gray">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp"
-        android:background="@drawable/textbg">
+        android:padding="12dp">
 
         <ImageView
-            android:id="@+id/fileThumbnail"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:id="@+id/iv_file_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:src="@drawable/ic_pdf"
-            android:contentDescription="File icon" />
+            app:tint="@color/Green"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="File Type Icon"/>
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_file_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingStart="12dp">
+            android:layout_marginStart="12dp"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:maxLines="2"
+            android:ellipsize="end"
+            app:layout_constraintStart_toEndOf="@id/iv_file_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_delete"
+            tools:text="CSE 1101 Final Exam Solution - Spring 2024.pdf"/>
 
-            <TextView
-                android:id="@+id/fileName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="File Name"
-                android:textSize="16sp"
-                android:textStyle="bold|italic"
-                android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/tv_uploader"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray"
+            android:layout_marginStart="12dp"
+            app:layout_constraintStart_toEndOf="@id/iv_file_icon"
+            app:layout_constraintTop_toBottomOf="@id/tv_file_name"
+            android:maxLines="1"
+            tools:text="Uploader: Tanim"/>
 
-            <TextView
-                android:id="@+id/uploaderName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Uploaded by: uploader"
-                android:textSize="14sp"
-                android:textColor="@color/black" />
-
-        </LinearLayout>
         <ImageButton
-            android:id="@+id/deleteButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center_vertical"
-            android:scaleType="centerInside"
+            android:id="@+id/btn_delete"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="8dp"
             android:src="@drawable/ic_delete"
-            android:contentDescription="Delete file"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:visibility="visible" />
+            app:tint="@color/Red"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="Delete File"/>
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
