--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -10,9 +10,9 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/textbg">
+        android:background="@color/white"
+        >
 
-        <!-- Left Column: Name, Semester, Gender, Role -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.6"
@@ -21,12 +21,12 @@
 
             <TextView
                 android:id="@+id/tvName"
-                android:textStyle="bold|italic"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Semester"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Gender"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -51,10 +51,20 @@
                 android:layout_height="wrap_content"
                 android:text="Role"
                 android:textColor="#F9A825"
-                android:textStyle="italic" />
+                />
+
+            <TextView
+                android:id="@+id/tvLastLoggedIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Last Seen: Loading..."
+                android:textSize="12sp"
+                android:textColor="#888888"
+                android:layout_marginTop="4dp"
+                />
+
         </LinearLayout>
 
-        <!-- Right Column: Student ID, Email, Phone -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.4"
@@ -67,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Student ID"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -78,7 +88,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textSize="10sp"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -86,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Phone"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 />
 
             <TextView
