--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,20 +9,17 @@
     <color name="menuText">#FFFFFFFF</color>
     <color name="Red">#FF0000</color>
     <color name="Green">#39723B</color>
+    <color name="Blue">#0277BD</color>
 
-    <!--colors for modern ui-->
     <color name="whiteTextColor">#fff</color>
     <color name="primaryTextColor">#00a5ff</color>
     <color name="loginBkColor">#f0f0f0</color>
 
-    <!--colros for card-->
     <color name="whiteCardColor">#fff</color>
 
     <color name="colorPrimary">#1F5BF3</color>
     <color name="backgroundColor">#ebf0f3</color>
     <color name="colorPrimaryDark">#0947E8</color>
     <color name="colorAccent">#00A5FF</color>
-
-
 
 </resources>
